src/app/components/summary/summary.css
md-sidenav {
    padding: 10px;
}

md-sidenav-container {
    min-height: 1024px;
}

.summary-card.mat-card {
    margin: 10px;
    transition: all 0.5s ease;
    box-shadow:2px 2px 5px;
    border:0 solid #000;
    display: block;
}

.summary-card:hover {
    background-color: rgba(27, 27, 202, 0.15);

}

.summary-card-active {
    background-color: rgba(27, 27, 202, 0.3);
}

.card-hashkey-text {
    color: gray;
    font-size: 80%;
}

.card-retry-text {
    color: gray;
    font-size: 80%;
}

.hashkey-text {
    color: gray;
    font-size: 50%;
}

.retry-text {
    color: gray;
    font-size: 50%;
}

.sidebar {
    background-color: rgb(103, 58, 183);
    color: darkgray;
    padding-right: 10px;
    min-height: 1024px;
}

